@@ -558,6 +558,47 @@ literal|null
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|getUsableSpaceInGB
+specifier|static
+name|long
+name|getUsableSpaceInGB
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|long
+name|space
+init|=
+name|Files
+operator|.
+name|getFileStore
+argument_list|(
+name|Paths
+operator|.
+name|get
+argument_list|(
+literal|"/"
+argument_list|)
+argument_list|)
+operator|.
+name|getUsableSpace
+argument_list|()
+decl_stmt|;
+name|long
+name|spaceInGB
+init|=
+name|space
+operator|/
+literal|1024
+operator|/
+literal|1024
+operator|/
+literal|1024
+decl_stmt|;
+return|return
+name|spaceInGB
+return|;
+block|}
 DECL|method|invoke
 specifier|public
 name|Map
@@ -660,34 +701,12 @@ condition|)
 block|{
 try|try
 block|{
-name|long
-name|space
-init|=
-name|Files
-operator|.
-name|getFileStore
-argument_list|(
-name|Paths
-operator|.
-name|get
-argument_list|(
-literal|"/"
-argument_list|)
-argument_list|)
-operator|.
-name|getUsableSpace
-argument_list|()
-decl_stmt|;
+specifier|final
 name|long
 name|spaceInGB
 init|=
-name|space
-operator|/
-literal|1024
-operator|/
-literal|1024
-operator|/
-literal|1024
+name|getUsableSpaceInGB
+argument_list|()
 decl_stmt|;
 name|result
 operator|.
