@@ -334,6 +334,38 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+specifier|final
+name|long
+name|minGB
+init|=
+operator|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|1
+else|:
+literal|0
+operator|)
+decl_stmt|;
+name|assumeTrue
+argument_list|(
+literal|"doIntegrationTest needs minGB="
+operator|+
+name|minGB
+operator|+
+literal|" usable disk space"
+argument_list|,
+name|ImplicitSnitch
+operator|.
+name|getUsableSpaceInGB
+argument_list|()
+operator|>
+name|minGB
+argument_list|)
+expr_stmt|;
 name|String
 name|rulesColl
 init|=
@@ -405,7 +437,9 @@ literal|"cores:<4"
 argument_list|,
 literal|"node:*,replica:<2"
 argument_list|,
-literal|"freedisk:>1"
+literal|"freedisk:>"
+operator|+
+name|minGB
 argument_list|)
 operator|.
 name|setSnitch
@@ -526,7 +560,9 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|">1"
+literal|">"
+operator|+
+name|minGB
 argument_list|,
 operator|(
 operator|(
@@ -1001,6 +1037,60 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+specifier|final
+name|long
+name|minGB1
+init|=
+operator|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|1
+else|:
+literal|0
+operator|)
+decl_stmt|;
+specifier|final
+name|long
+name|minGB2
+init|=
+literal|5
+decl_stmt|;
+name|assumeTrue
+argument_list|(
+literal|"testModifyColl needs minGB1="
+operator|+
+name|minGB1
+operator|+
+literal|" usable disk space"
+argument_list|,
+name|ImplicitSnitch
+operator|.
+name|getUsableSpaceInGB
+argument_list|()
+operator|>
+name|minGB1
+argument_list|)
+expr_stmt|;
+name|assumeTrue
+argument_list|(
+literal|"testModifyColl needs minGB2="
+operator|+
+name|minGB2
+operator|+
+literal|" usable disk space"
+argument_list|,
+name|ImplicitSnitch
+operator|.
+name|getUsableSpaceInGB
+argument_list|()
+operator|>
+name|minGB2
+argument_list|)
+expr_stmt|;
 name|String
 name|rulesColl
 init|=
@@ -1065,7 +1155,9 @@ literal|"cores:<4"
 argument_list|,
 literal|"node:*,replica:1"
 argument_list|,
-literal|"freedisk:>1"
+literal|"freedisk:>"
+operator|+
+name|minGB1
 argument_list|)
 operator|.
 name|setSnitch
@@ -1149,7 +1241,9 @@ name|add
 argument_list|(
 literal|"rule"
 argument_list|,
-literal|"freedisk:>5"
+literal|"freedisk:>"
+operator|+
+name|minGB2
 argument_list|)
 expr_stmt|;
 name|p
@@ -1331,7 +1425,9 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|">5"
+literal|">"
+operator|+
+name|minGB2
 argument_list|,
 operator|(
 operator|(
